--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "trustgraph-hub",
-  "description": "Trustgraph Hub",
-  "author": "Trustgraph",
+  "name": "trustnote-hub",
+  "description": "Trustnote Hub",
+  "author": "Trustnote",
   "version": "0.1.5",
   "main": "start.js",
   "keywords": [
     "hub",
-    "trustgraph",
+    "trustnote",
     "messaging",
     "chat"
   ],
@@ -15,17 +15,17 @@
   },
   "license": "MIT",
   "repository": {
-    "url": "https://gitee.com/trustgraph/trustgraph-hub.git",
+    "url": "https://gitee.com/trustnote/trustnote-hub.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://gitee.com/trustgraph/trustgraph-hub/issues"
+    "url": "https://gitee.com/trustnote/trustnote-hub/issues"
   },
   "browser": {
     "request": "browser-request",
     "secp256k1": "secp256k1/js"
   },
   "dependencies": {
-    "trustgraph-relay": "git+ssh://git@gitee.com:trustgraph/trustgraph-relay.git"
+    "trustnote-relay": "git+ssh://git@gitee.com:trustnote/trustnote-relay.git"
   }
 }
