--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+local_update_common.sh
+package-lock.json
+/.idea
+
+
 # Coverage directory used by tools like istanbul
 coverage
 
@@ -35,5 +40,3 @@ Temporary Items
 Session.vim
 .netrwhist
 *~
-
-log
